# touchdesigner-cli

./: .gitignore  README.md  audio_experience.json  audio_reactive_art.json  myvisuals.json  td_audio_experience.py  td_disintegration_effect.py  td_launch_project.py
agent-harness/: README.md  dashboard_project.json  pyproject.toml  setup.py
agent-harness/cli_anything_touchdesigner/: __init__.py  backend.py  cli.py  connection.py  formatter.py  network.py  operators.py  project.py  repl_skin.py
agent-harness/dashboard/: server.py
agent-harness/dashboard/static/: generative.html  index.html
agent-harness/docs/: AGENTS.md  INSTALL.md
agent-harness/tests/: test_cli.py  test_connection.py  test_network.py  test_operators.py  test_project.py
